--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ springfox_version=2.7.0
 spring_boot_version=1.5.4.RELEASE
 mapstruct_version=1.1.0.Final
 yarn_version=0.24.6
+kotlin_version=1.1.3-2
 
 ## below are some of the gradle performance improvement settings that can be used as required, these are not enabled by default
 
