--- a/build.gradle
+++ b/build.gradle
@@ -51,18 +51,7 @@ idea {
     module {
         inheritOutputDirs = true
         generatedSourceDirs += file("build/generated/source/apt")
-    }
-    module.iml.withXml {
-        def node = it.asNode()
-        def content = node.component.find { it.'@name' == 'NewModuleRootManager' }.content[0]
-        content.sourceFolder.each { sourceFolder ->
-            if(sourceFolder.@url?.endsWith('/resources')) {
-                sourceFolder.attributes().with {
-                    boolean isTestSource = (remove('isTestSource') == 'true')
-                    put('type', isTestSource ? 'java-test-resource' : 'java-resource')
-                }
-            }
-        }
+        testSourceDirs += file('src/test/java')
     }
 }
 
