--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/platform-browser-dynamic": "4.2.5",
     "@angular/router": "4.2.5",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.27",
+    "@types/marked": "^0.0.28",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
+    "marked": "^0.3.6",
     "ng-jhipster": "0.2.6",
     "ng2-webstorage": "1.8.0",
     "ngx-cookie": "1.0.0",
@@ -62,9 +64,12 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
     "ngc-webpack": "3.0.0",
+    "node-sass": "4.5.3",
     "phantomjs-prebuilt": "2.1.14",
+    "postcss-loader": "2.0.6",
     "proxy-middleware": "0.15.0",
     "rimraf": "2.6.1",
+    "sass-loader": "6.0.6",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "string-replace-webpack-plugin": "0.1.3",
     "style-loader": "0.18.2",
@@ -72,15 +77,12 @@
     "tslint": "5.5.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.3.4",
-    "sass-loader": "6.0.6",
-    "node-sass": "4.5.3",
-    "postcss-loader": "2.0.6",
+    "web-app-manifest-loader": "0.1.1",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1",
     "webpack-merge": "4.1.0",
     "webpack-notifier": "1.5.0",
     "webpack-visualizer-plugin": "0.1.11",
-    "web-app-manifest-loader": "0.1.1",
     "write-file-webpack-plugin": "4.1.0"
   },
   "engines": {
