--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.27",
     "@types/marked": "^0.0.28",
     "bootstrap": "4.0.0-alpha.6",
+    "bootstrap-toggle": "^2.2.2",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
