--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "4.2.5",
     "@angular/platform-browser-dynamic": "4.2.5",
     "@angular/router": "4.2.5",
+    "@angular/animations": "^4.2.5",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.27",
     "@types/marked": "^0.0.28",
     "bootstrap": "4.0.0-alpha.6",
