--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ if (project.hasProperty('prometheus')) {
 }
 
 group = 'at.hschroedl.pages'
-version = '0.0.1-SNAPSHOT'
+version = '0.1'
 
 description = ''
 
